docs: Fix line-wrapping in tables

--- a/DocumentationSphinx/static/dyssol_style.css
+++ b/DocumentationSphinx/static/dyssol_style.css
@@ -1,3 +1,17 @@
+/* Stop limiting page width */
 .wy-nav-content {
     max-width: none;
+}
+
+/* Fix missing line-wrapping with Sphinx-RTD theme */
+/* override table width restrictions */
+@media screen and (min-width: 767px) {
+    .wy-table-responsive table td {
+       /* !important prevents the common CSS stylesheets from overriding this as on RTD they are loaded after this stylesheet */
+       white-space: normal !important;
+    }
+ 
+    .wy-table-responsive {
+       overflow: visible !important;
+    }
 }
